Bug 346003 - Entries in an investment account that have a split transaction for fees show incorrectly
Summary: Entries in an investment account that have a split transaction for fees show ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-08 22:33 UTC by Ian Neal
Modified: 2018-03-28 08:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Neal 2015-04-08 22:33:51 UTC
If you create a buy in an investment account that has a split transaction for the fees then it shows incorrectly in both the list and the detail panel.

Reproducible: Always

Steps to Reproduce:
1. Create a new buy in the investment account (600.00) with a split transaction for the fees
2. Have part of the fee 1.50 going to an expense category and part being a reversal from a commission credit account (1.00)
3. Confirm the buy and look at the list of entries and the detail pane.

Actual Results:  
1. The value column for the buy shows as being 1.00
2. The total in the detail pane also shows 1.00
3. The fees in the detail pane only shows part of the split (the expense category and 1.50)
4. The account field in the detail pane shows as being the commission credit account rather than the brokerage account.

Expected Results:  
1. The value column for the buy should show total of the buy plus the fee (600.50)
2. The total in the detail pane should also show 600.50
3. The fees in the detail pane should indicate it is a split transaction with a total of 0.50

If you look at the buy from the brokerage account, the value appears correct so 600.50
If you look at the buy from the commission credit account, the value appears correct so 1.00
If you attempt to edit the buy in the investment account then all the incorrect information from the detail pane gets populated into the widget and has to be corrected.
Comment 1 wojnilowicz 2017-02-17 20:34:56 UTC
Git commit 598c110125433a0ac7210fda10ba43811e239d8d by Łukasz Wojniłowicz.
Committed on 17/02/2017 at 20:15.
Pushed by wojnilowicz into branch 'master'.

Prevent overwrite of assetAccountSplit

Summary:
FIXED-IN:5.0
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>
Differential Revision: https://phabricator.kde.org/D4399

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

M  +7    -1    kmymoney/kmymoneyutils.cpp

https://commits.kde.org/kmymoney/598c110125433a0ac7210fda10ba43811e239d8d