Prevent overwrite of assetAccountSplit

Summary:
BUG:346003
FIXED-IN:5.0
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>
Differential Revision: https://phabricator.kde.org/D4399

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>